# cmake_tutorial

./: README.md
tut_1/: CMakeLists.txt  test.cpp
tut_2_a_project_with_directories/: CMakeLists.txt
tut_3_building_a_shared_library/: CMakeLists.txt
tut_5_using_a_shared_or_static_library/: CMakeLists.txt
